Fixed a bug in introduction section in style.css file in css dir. BUG Description: overflow was not working on the mockup screens.

--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,13 @@ body {
     /* background-color: hsl(0, 0%, 100%); */
     /* background-color: ; */
     background-color: rgb(250, 250, 250);
-   
-    
+    /* overflow: hidden; */
+    /* width:100vw; */
 }
+.wrapper {
+    overflow: hidden;
 
+}
 
 img {
     width: 100px;
@@ -67,7 +70,7 @@ li {
     background-color: white;
     justify-content: space-between;
     flex-direction: row;
-    z-index: 100;
+    z-index: 6;
     
 }
 
@@ -169,7 +172,7 @@ li {
 
 .intro-content {
     position: relative;
-    overflow: hidden;
+    
 }
 
 .mockup-section {
@@ -248,9 +251,9 @@ li {
 .choose-bank-section {
     padding: 5rem 1.2rem 2rem 1.2rem;
     text-align: center;
-    position: relative;
     background-color:  hsl(220, 16%, 96%);
-    z-index: 1000;
+    position: relative;
+    z-index: -1;
 }
 
 .choose-bank-wrapper {
@@ -689,12 +692,12 @@ footer {
         position: relative;
         right: -15px;
         top: -60px;
-        z-index: -2;
         width: 100%;
     }
 
     .mockup-background-desktop img {
         width: 600px;
+        z-index: 1;
     }
 
     .intro-mockups {
@@ -712,17 +715,22 @@ footer {
         display: flex;
         justify-content: space-between;
         position: relative;
+        width: 100vw;
+        
+        /* overflow-x: visible; */
+    }
+    
+    .mockup-background-desktop{
+        overflow-x: hidden;
     }
 
-    .intro-wrapper {
-        display:flex;
-        justify-content: space-between;
-        position: relative;
-    }
-
+    /* .intro-mockups {
+        overflow-x: hidden;
+    } */
+    
     .mockup-section {
+        /* overflow-x: hidden; */
         width: 50%;
-        overflow: hidden;
     }
     
     .intro-content {
@@ -732,9 +740,7 @@ footer {
         text-align: left;
         align-items: flex-start;
     }
-    .choose-bank-section {
-        /* z-index: -10; */
-    }
+    
 }
 
 
@@ -921,11 +927,11 @@ footer {
         position: relative;
         right: -24px;
         top: -200px;
-        z-index: -2;
         width: 100%;
     }
-
+    
     .mockup-background-desktop img {
+        z-index: 1;
         width: 1000px;
     }
 
@@ -954,6 +960,7 @@ footer {
         justify-content: center;
         max-width: 1400px;
     }
+    
 }
 
 @media (min-width: 1720px) {
